--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,3 +18,5 @@ anyhow = "1.0"
 tokio-stream = "0.1"
 dotenv = "0.15.0"
 tower-http = { version = "0.6.6", features = ["fs"] }
+sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
+chrono = "0.4.42"
