--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
 axiom = "0.2.1"
 regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
+futures = "0.3"
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
