--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,8 +4,8 @@ version = "0.0.1"
 edition = "2024"
 
 [dependencies]
-axum = { version = "0.8.6", features = ["multipart"] }
-aws-sdk-s3 = { version = "1", features = ["behavior-version-latest"] }
+axum = { version = "0.8.7", features = ["multipart"] }
+aws-sdk-s3 = { version = "1.115.0", features = ["behavior-version-latest"] }
 axiom = "0.2.1"
 regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
@@ -21,3 +21,7 @@ dotenv = "0.15.0"
 tower-http = { version = "0.6.6", features = ["fs"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
 chrono = "0.4.42"
+hmac = "0.12.1"
+sha2 = "0.10.9"
+hex = "0.4.3"
+minify-js = "0.6.0"
