--- a/akane-webui/package.json
+++ b/akane-webui/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^24.10.1",
     "@types/react": "^19.2.6",
     "@types/react-dom": "^19.2.3",
+    "daisyui": "^5.5.5",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4.1.17",
