--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,7 +17,7 @@ serde_json = "1.0"
 uuid = { version = "1.18.1", features = ["v4"] }
 anyhow = "1.0"
 tokio-stream = "0.1"
-dotenv = "0.15.0"
+serde_yaml = "0.9"
 tower-http = { version = "0.6.6", features = ["fs", "trace"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
 chrono = "0.4.42"
