--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,26 +13,34 @@ jobs:
   build-frontend:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Setup Bun
-      uses: oven-sh/setup-bun@v1
-      with:
-        bun-version: latest
+      - uses: actions/checkout@v4
 
-    - name: Install dependencies
-      working-directory: akane-webui
-      run: bun install
+      - name: Setup Bun
+        uses: oven-sh/setup-bun@v1
+        with:
+          bun-version: latest
 
-    - name: Build
-      working-directory: akane-webui
-      run: bun run build
+      - name: Cache Bun dependencies
+        uses: actions/cache@v4
+        with:
+          path: ~/.bun/install/cache
+          key: ${{ runner.os }}-bun-${{ hashFiles('akane-webui/bun.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-bun-
 
-    - name: Upload frontend artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: webui
-        path: akane-webui/dist/
+      - name: Install dependencies
+        working-directory: akane-webui
+        run: bun install
+
+      - name: Build
+        working-directory: akane-webui
+        run: bun run build
+
+      - name: Upload frontend artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: webui
+          path: akane-webui/dist/
 
   build-backend:
     needs: build-frontend
@@ -51,59 +59,64 @@ jobs:
     runs-on: ${{ matrix.os }}
 
     steps:
-    - uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-    - name: Download frontend artifact
-      uses: actions/download-artifact@v4
-      with:
-        name: webui
-        path: webui
+      - name: Download frontend artifact
+        uses: actions/download-artifact@v4
+        with:
+          name: webui
+          path: webui
 
-    - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
-      with:
-        targets: ${{ matrix.target }}
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+        with:
+          targets: ${{ matrix.target }}
 
-    - name: Build
-      run: cargo build --release --target ${{ matrix.target }}
+      - name: Rust Cache
+        uses: swatinem/rust-cache@v2
+        with:
+          key: ${{ matrix.target }}
 
-    - name: Prepare distribution
-      shell: bash
-      run: |
-        mkdir dist
-        cp target/${{ matrix.target }}/release/${{ matrix.binary_name }} dist/
-        cp -r webui dist/
-        # Copy migrations if they weren't embedded, but they are.
-        # Copy example config if exists
-        if [ -f config.yml.example ]; then
-          cp config.yml.example dist/config.yml
-        fi
+      - name: Build
+        run: cargo build --release --target ${{ matrix.target }}
 
-    - name: Upload artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ${{ matrix.artifact_name }}
-        path: dist/
+      - name: Prepare distribution
+        shell: bash
+        run: |
+          mkdir dist
+          cp target/${{ matrix.target }}/release/${{ matrix.binary_name }} dist/
+          cp -r webui dist/
+          # Copy migrations if they weren't embedded, but they are.
+          # Copy example config if exists
+          if [ -f config.yml.example ]; then
+            cp config.yml.example dist/config.yml
+          fi
 
-    - name: Zip artifact
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      shell: bash
-      run: |
-        cd dist
-        if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          7z a ../${{ matrix.artifact_name }}.zip *
-        else
-          zip -r ../${{ matrix.artifact_name }}.zip *
-        fi
+      - name: Upload artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: ${{ matrix.artifact_name }}
+          path: dist/
 
-    - name: Release
-      uses: softprops/action-gh-release@v1
-      if: github.event_name == 'push' && github.ref == 'refs/heads/main'
-      with:
-        files: ${{ matrix.artifact_name }}.zip
-        tag_name: v${{ github.run_number }}
-        name: v${{ github.run_number }}
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - name: Zip artifact
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        shell: bash
+        run: |
+          cd dist
+          if [ "${{ matrix.os }}" == "windows-latest" ]; then
+            7z a ../${{ matrix.artifact_name }}.zip *
+          else
+            zip -r ../${{ matrix.artifact_name }}.zip *
+          fi
+
+      - name: Release
+        uses: softprops/action-gh-release@v1
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        with:
+          files: ${{ matrix.artifact_name }}.zip
+          tag_name: v${{ github.run_number }}
+          name: v${{ github.run_number }}
+          draft: false
+          prerelease: false
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
