--- a/akane-webui/package.json
+++ b/akane-webui/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "bun --bun next dev --turbo",
+    "dev": "bun --bun next dev --turbo -p 3001",
     "build": "bun --bun next build --turbo",
     "start": "bun --bun next start",
     "lint": "eslint"
