--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "akane"
-version = "0.1.0"
+version = "1.0.0"
 edition = "2024"
 
 [dependencies]
@@ -9,15 +9,15 @@ aws-sdk-s3 = { version = "1.115.0", features = ["behavior-version-latest"] }
 axiom = "0.2.1"
 regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
-futures = "0.3"
+futures = "0.3.31"
 tracing = "0.1.41"
-tracing-subscriber = { version = "0.3", features = ["env-filter"] }
+tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
 serde = { version = "1.0", features = ["derive"] }
-serde_json = "1.0"
+serde_json = "1.0.145"
 uuid = { version = "1.18.1", features = ["v4"] }
-anyhow = "1.0"
-tokio-stream = "0.1"
-serde_yaml = "0.9"
+anyhow = "1.0.100"
+tokio-stream = "0.1.17"
+serde_yaml = "0.9.34-deprecated"
 tower-http = { version = "0.6.7", features = ["fs", "trace", "cors"] }
 sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
 chrono = "0.4.42"
@@ -25,5 +25,5 @@ hmac = "0.12.1"
 sha2 = "0.10.9"
 hex = "0.4.3"
 minify-js = "0.6.0"
-async-stream = "0.3"
-clickhouse = { version = "0.13.0", features = [] }
+async-stream = "0.3.6"
+clickhouse = { version = "0.14.1", features = [] }
