--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,9 +10,9 @@ axiom = "0.2.1"
 regex = "1.12.2"
 tokio = { version = "1.48.0", features = ["full"] }
 futures = "0.3.31"
-tracing = "0.1.41"
-tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
-serde = { version = "1.0", features = ["derive"] }
+tracing = "0.1.43"
+tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
+serde = { version = "1.0.228", features = ["derive"] }
 serde_json = "1.0.145"
 uuid = { version = "1.18.1", features = ["v4"] }
 anyhow = "1.0.100"
@@ -27,3 +27,11 @@ hex = "0.4.3"
 minify-js = "0.6.0"
 async-stream = "0.3.6"
 clickhouse = { version = "0.14.1", features = [] }
+tokio-util = { version = "0.7.17", features = ["io"] }
+
+[profile.release]
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
+opt-level = 3
