--- a/config.yml.example
+++ b/config.yml.example
@@ -5,6 +5,7 @@ server:
   admin_password: "change_me"
   max_concurrent_encodes: 1
   max_concurrent_uploads: 30
+  root_redirect_url: "https://altqx.com/"
 
 r2:
   endpoint: "https://<accountid>.r2.cloudflarestorage.com"
