--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,7 @@ async-stream = "0.3.6"
 clickhouse = { version = "0.14.1", features = [] }
 tokio-util = { version = "0.7.17", features = ["io"] }
 reqwest = { version = "0.12.24", features = ["rustls-tls"], default-features = false }
+xxhash-rust = { version = "0.8", features = ["xxh64"] }
 
 [profile.release]
 lto = true
